feat: menambahkan fungsi membaca kartu dan penjelasan gpg

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Penjelasan konsep kartu ujian digital yang bisa dibaca oleh manusia dan komputer (khususnya telepon genggam)",
   "main": "index.js",
   "scripts": {
-    "scrape": "node 001-ekstraksi-data/scraper.js"
+    "scrape": "node 001-ekstraksi-data/scraper.js",
+    "read": "node 002-membaca-kartu/reader.js"
   },
   "author": "Ezra Khairan Permana",
   "dependencies": {
+    "any-steganography": "^1.1.3",
     "puppeteer": "^14.1.1"
   }
 }
