--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Ezra Khairan Permana",
   "dependencies": {
     "any-steganography": "^1.1.3",
-    "puppeteer": "^14.1.1"
+    "express": "^4.18.1",
+    "puppeteer": "^14.1.1",
+    "puppeteer-cluster": "^0.23.0"
   }
 }
